--- a/catkin_ws/src/prg/prg_100_description/CMakeLists.txt
+++ b/catkin_ws/src/prg/prg_100_description/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(prg_100)
+project(prg_100_description)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,10 +8,15 @@ project(prg_100)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  controller_manager
+  geometry_msgs
+  joint_state_controller
+  robot_state_publisher
   roscpp
   rospy
-  serial
   std_msgs
+  tf
+  urdf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -71,7 +76,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs
+#   geometry_msgs#   std_msgs
 # )
 
 ################################################
@@ -105,8 +110,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES prg_100
-#  CATKIN_DEPENDS roscpp rospy serial std_msgs
+#  LIBRARIES prg_100_description
+#  CATKIN_DEPENDS controller_manager geometry_msgs joint_state_controller robot_state_publisher roscpp rospy std_msgs tf urdf
 #  DEPENDS system_lib
 )
 
@@ -123,7 +128,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/prg_100.cpp
+#   src/${PROJECT_NAME}/prg_100_description.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -134,7 +139,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/prg_100_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/prg_100_description_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -198,7 +203,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_prg_100.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_prg_100_description.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
